--- a/SimpleExample/SimpleExample.vcxproj
+++ b/SimpleExample/SimpleExample.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SampleExample1213.cpp" />
     <ClCompile Include="SimpleExample.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
